# UNDLunarRobotics22

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  example.cpp  install.sh  installPhoenix.py  run.sh  todo.md
ArduinoCode/: IRSensors.h  LinearAct.h  WithKalman.ino
ME/: README.txt
SerialStuff/: serialRead  serialRead.cpp
baseStation/: makefile  readio.cpp
documentation/: class_diagram.plantuml  high_level_diagram.plantuml
opencv/: cmakelists.txt
pi/: fix_sudo-apt.py  interfaces  interfaces.d  robo.service
robotCode/: CMakeCache.txt  CMakeLists.txt  ME_DigMeAHole.cpp  Makefile  Mining.h  TractionControl.h  chassis.h  chassis.h.gch  cmake_install.cmake  deposition.h  example.cpp  movement.h  testbed.cpp
robotCode/infra/: kalmanFilter.h  logging.h  readSerial.h  serialThread.h  setup.h
robotCode/jettsonCode/: .PathFollowing.h.swo  .main.cpp.swp  AStarCode.h  CMakeLists.txt  OccupancyMap.h  OccupancyMap.h.gch  PathFollowing.h  ZED_Tutorial_3  autonomy  detect_markers.cpp  detect_markers.hpp  fiducial.h  main.cpp  matplotlibcpp.h
robotCode/tests/: a.out  kalmanTest.cpp  test_serial.cpp
server/: movement.h  movement.h.save
